--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,15 @@ version: '3.7'
 services:
   mysql:
     image: mysql:8
+    command:
+      --default-authentication-plugin=mysql_native_password
+    restart: always
     ports:
       - '3306:3306'
     volumes:
-      - ./data:/var/lib/mysql
+      - ./src/test/resources/:/docker-entrypoint-initdb.d
     environment:
       - MYSQL_RANDOM_ROOT_PASSWORD=yes
-      - MYSQL_DATABASE = database
-      - MYSQL_USER = admin
-      - MYSQL_PASSWORD= password
+      - MYSQL_DATABASE=app
+      - MYSQL_USER=app
+      - MYSQL_PASSWORD=pass
